  The email sent also includes an additional line, which is the URL to
  the auto-created topic.
  
* Updated install.pl so that it can be executed from any directory, not
  just bin.
  
* Creating Perforce topics directly from already committed files in the
  depot did not work if the depot was on a different machine to the
  web-server.  This has now been fixed.
  
* Added a drop-down on the topic create page where the initial topic
  state can be set.  By default, this is set to "Open", however in
  situations where a review has already been performed but needs to
  be recorded, or a topic is automatically created from a post-commit
  script from an SCM, sometimes another initial state is desirable.
  
* Updated install.pl to support a separate Apache virtual host per
  Codestriker project as suggested by dmulter@users.sourceforge.net.
  Manual has been updated with the appropriate instructions. 

Version 1.9.6

* Ability to create Codestriker topics automatically from a Subversion
  commit, via the bin/subversion-post-commit.pl script.  Once the
  appropriate configuration is set at the start of the file, simply
  add it to your Subversion repos/hooks/post-commit file as the
  following:
  
  /path/to/codestriker/bin/subversion-post-commit.pl "$REPOS" "$REV"

* "Default to head" option for CVS topic creation was not used when
  selected, but when it was unselected.  This has now been fixed.  
  Spotted by mnk26@users.sourceforge.net.
  
* Fix for "v-string in use/require non-portable" warning when using
  Perl 5.10 from rob_webset@users.sourceforge.net.
  
* Deleting a topic connected with a TestDirector bug has been fixed
  by rob_webset@users.sourceforge.net.
  
* Creation of Subversion topics which use a file for the module field
  in the create topic screen may not work correctly for some versions
  of Subversion.  This has now been fixed by 
  rob_webset@users.sourceforge.net.
  
* Make sure XML representation of a topic has its data properly escaped.